@@ -1140,13 +1140,13 @@ public class MapResource {
                         ret.putAll(tags);
                         Object oInput1 = ret.get("input1");
                         if (oInput1 != null) {
-                            String dispName = DbUtils.getDisplayNameById(conn, new Long(oInput1.toString()));
+                            String dispName = DbUtils.getDisplayNameById(conn, Long.valueOf(oInput1.toString()));
                             ret.put("input1Name", dispName);
                         }
 
                         Object oInput2 = ret.get("input2");
                         if (oInput2 != null) {
-                            String dispName = DbUtils.getDisplayNameById(conn, new Long(oInput2.toString()));
+                            String dispName = DbUtils.getDisplayNameById(conn, Long.valueOf(oInput2.toString()));
                             ret.put("input2Name", dispName);
                         }
                     }
